--- a/public/index.html
+++ b/public/index.html
@@ -2,8 +2,8 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Document</title>
-  <link rel="stylesheet" href="css/app.css">
+  <title>Electric Circuit</title>
+  <link rel="stylesheet" href="css/index.css">
 </head>
 <body>
   <svg id="out" style="width:100%;height:100%;position:fixed;top:0;left:0;bottom:0;right:0;"></svg>
