--- a/public/index.html
+++ b/public/index.html
@@ -1,12 +1,15 @@
 <!DOCTYPE html>
-<html lang="en">
+<html itemscope="" itemtype="http://schema.org/WebPage">
 <head>
-  <meta charset="UTF-8">
-  <title>Electric Circuit</title>
+  <title itemprop="name">Electric Circuit</title>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width,minimum-scale=1,initial-scale=1">
+  <meta content="width=device-width,initial-scale=1" name="viewport">
+  <meta content="[WIP] A playground for electric circuit with svg" name="description" itemprop="description">
   <link rel="stylesheet" href="css/index.css">
 </head>
 <body>
-  <svg id="out" style="width:100%;height:100%;position:fixed;top:0;left:0;bottom:0;right:0;"></svg>
+  <svg id="js-out" style="width:100%;height:100%;position:fixed;top:0;left:0;bottom:0;right:0;"></svg>
 
   <script src="js/snap.svg-min.js"></script>
   <script src="js/bundle.js"></script>
