--- a/public/index.html
+++ b/public/index.html
@@ -4,12 +4,184 @@
   <title itemprop="name">Electric Circuit</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width,minimum-scale=1,initial-scale=1">
-  <meta content="width=device-width,initial-scale=1" name="viewport">
   <meta content="[WIP] A playground for electric circuit with svg" name="description" itemprop="description">
   <link rel="stylesheet" href="css/index.css">
 </head>
 <body>
-  <svg id="js-out" style="width:100%;height:100%;position:fixed;top:0;left:0;bottom:0;right:0;"></svg>
+  <svg id="js-out" viewBox="0 0 1200 800">
+    <g id="js-board" class="Stripboard" transform="translate(200, 0)">
+      <g class="Stripboard-row">
+        <g class="Hole">
+          <rect x="0" y="0"></rect>
+          <circle cx="55" cy="55" r="10"></circle>
+        </g>
+        <g class="Hole">
+          <rect x="110" y="0"></rect>
+          <circle cx="165" cy="55" r="10"></circle>
+        </g>
+        <g class="Hole">
+          <rect x="220" y="0"></rect>
+          <circle cx="275" cy="55" r="10"></circle>
+        </g>
+        <g class="Hole">
+          <rect x="330" y="0"></rect>
+          <circle cx="385" cy="55" r="10"></circle>
+        </g>
+        <g class="Hole">
+          <rect x="440" y="0"></rect>
+          <circle cx="495" cy="55" r="10"></circle>
+        </g>
+        <g class="Hole">
+          <rect x="550" y="0"></rect>
+          <circle cx="605" cy="55" r="10"></circle>
+        </g>
+        <g class="Hole">
+          <rect x="660" y="0"></rect>
+          <circle cx="715" cy="55" r="10"></circle>
+        </g>
+        <g class="Hole">
+          <rect x="770" y="0"></rect>
+          <circle cx="825" cy="55" r="10"></circle>
+        </g>
+      </g>
+      <g class="Stripboard-row">
+        <g class="Hole">
+          <rect x="0" y="110"></rect>
+          <circle cx="55" cy="165" r="10"></circle>
+        </g>
+        <g class="Hole">
+          <rect x="110" y="110"></rect>
+          <circle cx="165" cy="165" r="10"></circle>
+        </g>
+        <g class="Hole">
+          <rect x="220" y="110"></rect>
+          <circle cx="275" cy="165" r="10"></circle>
+        </g>
+        <g class="Hole">
+          <rect x="330" y="110"></rect>
+          <circle cx="385" cy="165" r="10"></circle>
+        </g>
+        <g class="Hole">
+          <rect x="440" y="110"></rect>
+          <circle cx="495" cy="165" r="10"></circle>
+        </g>
+        <g class="Hole">
+          <rect x="550" y="110"></rect>
+          <circle cx="605" cy="165" r="10"></circle>
+        </g>
+        <g class="Hole">
+          <rect x="660" y="110"></rect>
+          <circle cx="715" cy="165" r="10"></circle>
+        </g>
+        <g class="Hole">
+          <rect x="770" y="110"></rect>
+          <circle cx="825" cy="165" r="10"></circle>
+        </g>
+      </g>
+      <g class="Stripboard-row">
+        <g class="Hole">
+          <rect x="0" y="220"></rect>
+          <circle cx="55" cy="275" r="10"></circle>
+        </g>
+        <g class="Hole">
+          <rect x="110" y="220"></rect>
+          <circle cx="165" cy="275" r="10"></circle>
+        </g>
+        <g class="Hole">
+          <rect x="220" y="220"></rect>
+          <circle cx="275" cy="275" r="10"></circle>
+        </g>
+        <g class="Hole">
+          <rect x="330" y="220"></rect>
+          <circle cx="385" cy="275" r="10"></circle>
+        </g>
+        <g class="Hole">
+          <rect x="440" y="220"></rect>
+          <circle cx="495" cy="275" r="10"></circle>
+        </g>
+        <g class="Hole">
+          <rect x="550" y="220"></rect>
+          <circle cx="605" cy="275" r="10"></circle>
+        </g>
+        <g class="Hole">
+          <rect x="660" y="220"></rect>
+          <circle cx="715" cy="275" r="10"></circle>
+        </g>
+        <g class="Hole">
+          <rect x="770" y="220"></rect>
+          <circle cx="825" cy="275" r="10"></circle>
+        </g>
+      </g>
+      <g class="Stripboard-row">
+        <g class="Hole">
+          <rect x="0" y="220"></rect>
+          <circle cx="55" cy="385" r="10"></circle>
+        </g>
+        <g class="Hole">
+          <rect x="110" y="220"></rect>
+          <circle cx="165" cy="385" r="10"></circle>
+        </g>
+        <g class="Hole">
+          <rect x="220" y="220"></rect>
+          <circle cx="275" cy="385" r="10"></circle>
+        </g>
+        <g class="Hole">
+          <rect x="330" y="220"></rect>
+          <circle cx="385" cy="385" r="10"></circle>
+        </g>
+        <g class="Hole">
+          <rect x="440" y="220"></rect>
+          <circle cx="495" cy="385" r="10"></circle>
+        </g>
+        <g class="Hole">
+          <rect x="550" y="220"></rect>
+          <circle cx="605" cy="385" r="10"></circle>
+        </g>
+        <g class="Hole">
+          <rect x="660" y="220"></rect>
+          <circle cx="715" cy="385" r="10"></circle>
+        </g>
+        <g class="Hole">
+          <rect x="770" y="220"></rect>
+          <circle cx="825" cy="385" r="10"></circle>
+        </g>
+      </g>
+      <g class="Stripboard-row">
+        <g class="Hole">
+          <rect x="0" y="220"></rect>
+          <circle cx="55" cy="495" r="10"></circle>
+        </g>
+        <g class="Hole">
+          <rect x="110" y="220"></rect>
+          <circle cx="165" cy="495" r="10"></circle>
+        </g>
+        <g class="Hole">
+          <rect x="220" y="220"></rect>
+          <circle cx="275" cy="495" r="10"></circle>
+        </g>
+        <g class="Hole">
+          <rect x="330" y="220"></rect>
+          <circle cx="385" cy="495" r="10"></circle>
+        </g>
+        <g class="Hole">
+          <rect x="440" y="220"></rect>
+          <circle cx="495" cy="495" r="10"></circle>
+        </g>
+        <g class="Hole">
+          <rect x="550" y="220"></rect>
+          <circle cx="605" cy="495" r="10"></circle>
+        </g>
+        <g class="Hole">
+          <rect x="660" y="220"></rect>
+          <circle cx="715" cy="495" r="10"></circle>
+        </g>
+        <g class="Hole">
+          <rect x="770" y="220"></rect>
+          <circle cx="825" cy="495" r="10"></circle>
+        </g>
+      </g>
+    </g>
+  </svg>
 
   <script src="js/snap.svg-min.js"></script>
   <script src="js/bundle.js"></script>
